# version-checker

./: .env.example  .env.local  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Makefile  docker-compose.yml  lefthook.yml  mise.toml  package-lock.json  playwright.config.ts
.claude/: settings.json
backend/: Dockerfile  lambda_handler.py  pyproject.toml
backend/app/: main.py  scan_worker_handler.py
backend/app/adapters/: database_repo.py  dynamo_repo.py  models.py  sqs_scan_queue.py
backend/app/api/: auth_deps.py
backend/app/api/routes/: auth.py  scan.py  usage.py
backend/app/domain/: entities.py  interfaces.py
backend/app/infrastructure/: config.py  database.py  init_db.py
backend/app/usecases/: github_auth.py  scan_jobs.py  scanner.py
backend/scripts/: migrate_repo_selection.py  run_daily_scan.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth_deps.py  test_config.py  test_database.py  test_dynamo_repo.py  test_entities.py  test_github_auth.py  test_models.py  test_scan_jobs.py  test_scan_worker_handler.py  test_scanner.py  test_token_usage_repository.py
e2e/: backend.spec.ts  frontend.spec.ts
frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  vitest.config.ts
scripts/: agent_stop_hook_unit_tests.sh  claude_pre_tool_use_guard.py  deploy_frontend.sh  generate_env.sh  generate_local_env.sh  switch_env.sh
terraform/: .gitignore  .terraform.lock.hcl  api_gateway.tf  backup.tf  dsql.tf  (+8 more)
(+22 files in other folders)
