[project]
name = "version-checker-backend"
version = "0.1.0"
description = "Backend for Version Checker"
authors = [
    {name = "Author"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "aiobotocore (>=3.1.3,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "boto3 (>=1.41.0,<1.42.50)",
    "pyjwt (>=2.9.0,<3.0.0)",
    "mangum (>=0.19.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.1.0,<27.0.0)"
]
